style: fix user stat links and spacing

--- a/frontend/src/styles/CenterPanel/profile.css
+++ b/frontend/src/styles/CenterPanel/profile.css
@@ -22,13 +22,23 @@
     padding-bottom: 10px;
 }
 
-.indiv-stats {
+.indiv-stats, 
+#stat-posts {
     display: flex;
     gap: 4px; 
 }
 
 .user-stats {
     display: flex;
+}
+
+.stat {
+    display: inline;
+}
+
+.stat:hover {
+    color: var(--lightest-blue);
+    text-decoration: underline;
 }
 
 .user-tabs {
